Add configurable FPS display setting for Discord embed
- Added 'showFPS' boolean setting to Discord configuration
- FPS field now conditionally displayed based on config.discord.showFPS
- Updated config.json, config.template.json, config.example.json, and CONFIG_GUIDE.md
- Allows users to toggle FPS display on/off in Discord embed message

--- a/config.template.json
+++ b/config.template.json
@@ -57,9 +57,11 @@
     
     "updateInterval": 30000,
     "_comment_updateInterval": "Update frequency (30 seconds)",
-    
-    "embedColor": "#00d4ff",
+      "embedColor": "#00d4ff",
     "_comment_embedColor": "Embed color (hex)",
+    
+    "showFPS": true,
+    "_comment_showFPS": "Show FPS in Discord embed (true/false)",
     
     "serverName": "Your Server Name",
     "_comment_serverName": "Display name",
